--- a/roles/Django/Django.YAML
+++ b/roles/Django/Django.YAML
@@ -46,6 +46,12 @@
         service: name=gunicorn state=started enabled=yes
   
 
+  handlers: 
+      - name: restart nginx
+        service: name=nginx state=restarted
+  
 
+      - name: restart gunicorn
+        service: name=gunicorn state=restarted
   
 
