--- a/site.yml
+++ b/site.yml
@@ -4,8 +4,8 @@
 
 - name: preparing Server with dependency
   vars_files:
-    - group_vars/all.yaml
-    - group_vars/Server.yaml
+    - group_vars/all
+    - group_vars/Server
   remote_user: ubuntu
 
   roles:
@@ -15,8 +15,8 @@
 - name: configure and deploy the webservers and application code
   remote_user: ubuntu
   vars_files:
-        - group_vars/all.yaml
-        - group_vars/django.yaml
+        - group_vars/all
+        - group_vars/django
 
   roles:
     - Django
