--- a/Untitled-1.yml
+++ b/Untitled-1.yml
@@ -1,4 +1,3 @@
----
 - name: Install utility packages common to all hosts
   apt:
     name:
@@ -8,8 +7,12 @@
     - openssh-server
     - sqlite3
     - sqlitebrowser
+    - python-dev
+    - python-pip
+    - python-virtualenv
     - python3-dev
     - python3-pip
     - python3-virtualenv
-    state: present
-    autoclean: yes
+  state: present
+  autoclean: yes
+
